[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["Gerd Reiss <gerdreiss@jscriptive.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gerdreiss/hypermodern-python"
repository = "https://github.com/gerdreiss/hypermodern-python"
keywords = ["hypermodern","python"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
